--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -16,7 +16,6 @@ PB_Culture_Civ_Cost10: "Converting/Accepting a Culture"
 ## -------- Map Mode -------- ##
 
 culture_map_mode_tooltip: "The majority culture of this state is §Y[?FROM.culture_token.GetTokenLocalizedKey]§!"
-#culture_map_mode_tooltip_delayed: "[FROM.get_PB_Culture_Loc_Delayed]" #spronkler please fix
 
 ## -------- Culture Conversion Ideas -------- ##
 
@@ -64,18 +63,15 @@ PB_Cultures_set_main_culture_tt: "Sets §Y[?temp_culture.GetTokenLocalizedKey]§
 ## -------- Simple View -------- ##
 PB_Culture_Expanded_Lore_tt: "This state's majority culture is: §Y[?culture_token.GetTokenLocalizedKey]§!"
 PB_Culture_Expanded_Lore_tt_delayed: "[!fetch_culture_description]"
-PB_Culture_Pol_Expanded_Lore_tt: "[?culture_v.GetTokenLocalizedKey]"
+PB_Culture_Pol_Expanded_Lore_tt: "[?culture_v.GetTokenLocalizedKey][PB_Main_or_Accepted]"
 PB_Culture_Pol_Expanded_Lore_tt_delayed: "[!fetch_culture_pol_description]"
 
 ## -------- Other Tooltips -------- ##
 
 PB_Culture_Main_tt: "§GAccepted Cultures§!"
-PB_Culture_Main_tt_delayed: "Accepted Cultures are cultures that incur no state penalty, whereas foreign cultures will give their respective state a small debuff alongside any non-core debuffs. Although rare there may be instances when a core state still contains a foreign culture, if this is the case then the state debuff will still apply. The proccess of converting or accepting a culture is done through the state gui, there may also be instances where focus, decision, or event effects will change the culture of a state.\n\nStates that have an accepted culture in them cannot be converted. The convert/acceptance process is also irreversible so do so wisely.\n\nCheck your §YMinority Rights§! political policy to see what your §gMonthly§! conversion/acceptance rate is.\n\nYou can only convert/accept §P10§! cultures at one given time."
-
-  #sprinkles please fix those 3 below too
-#PB_Culture_Pol_tt: "[PB_Main_or_Accepted]"
-#PB_Culture_Main_Culture_tt: "§Y[PB_Accepted_Cultures]§! is [ROOT.GetNameDef]'s §Cmain culture§!"
-#PB_Culture_Accepted_Culture_tt: "§Y[PB_Accepted_Cultures]§! is considered an §Gaccepted culture§! in [ROOT.GetNameDef]."
+PB_Culture_Main_tt_delayed: "Accepted Cultures are cultures that incur no state penalty, whereas foreign cultures will give their respective state a small debuff alongside any non-core debuffs. Although rare there may be instances when a core state still contains a foreign culture, if this is the case then the state debuff will still apply. The proccess of converting or accepting a culture is done through the state GUI, there may also be instances where focus, decision, or event effects will change the culture of a state.\n\nStates that have an accepted culture in them cannot be converted. The convert/acceptance process is also irreversible so do so wisely.\n\nCheck your §YMinority Rights§! political policy to see what your §gMonthly§! conversion/acceptance rate is.\n\nYou can only convert/accept §P10§! cultures at one given time."
+PB_Culture_Main_Culture_tt: " is [ROOT.GetNameDef]'s §Cmain culture§!"
+PB_Culture_Accepted_Culture_tt: " is considered an §Gaccepted culture§! in [ROOT.GetNameDef]."
 
 # BRITAIN #
 english: "English"
