--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -30,6 +30,7 @@
  VICTORY_POINTS_348:0 "Tilsit"
  VICTORY_POINTS_395:0 "Insterburg"
  VICTORY_POINTS_11386:0 "Lyck"
+ VICTORY_POINTS_526:0 "Braunschweig"
  VICTORY_POINTS_11399:0 "Lublin"
  VICTORY_POINTS_6332:0 "Königsberg"
  VICTORY_POINTS_6377:0 "Hannover"
@@ -44,7 +45,7 @@
  VICTORY_POINTS_9515:0 "Regensburg"
  VICTORY_POINTS_11417:0 "Würzburg"
  VICTORY_POINTS_11531:0 "Saarbrücken"
- VICTORY_POINTS_537:0 "Küstrin"
+ VICTORY_POINTS_6236:0 "Landsberg an der Warthe"
  VICTORY_POINTS_309:0 "Oldenburg" 
  VICTORY_POINTS_11360:0 "Emden" 
  VICTORY_POINTS_11811:0 "İzmit" 
