--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -358,7 +358,8 @@
  VICTORY_POINTS_3452:0 "Yelysavetgrad"
  VICTORY_POINTS_9451:0 "Uman"
  VICTORY_POINTS_3686:0 "Sevastopol"
- VICTORY_POINTS_3720:0 "Maykop"
+ VICTORY_POINTS_3717:0 "Maykop"
+ VICTORY_POINTS_6718:0 "Pyatigorsk"
  VICTORY_POINTS_4724:0 "Krasnoyarsk"
  VICTORY_POINTS_1803:0 "Bratsk"
  VICTORY_POINTS_4728:0 "Petropavlovsk"
