--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -148,7 +148,7 @@
   PB_RUS_Soverign_Of_The_New_World_Order:0 "Soverign Of The New World Order"
   PB_RUS_Pragmatist:0 "Russia's Greatest Pragmatist"
   PB_RUS_Anglophobe:0 "Anglophobe"
-  RUS_Michael_II_Desc:0 "§YBorn:§! 4/12/1878\n\n§YMichael II§! has served the throne for over fifteen years, his time spent as Russia’s newest Tsar has been one of continued reform, political radicalization, and economic growth. It is in these years that Russia has fundamentally transformed itself into one of the leading powers of the world, holding dominion over Eurasia and the Americas with one of the largest standing armies in the world. It was with this army in the war-torn fields of Siberia during the Great War where Russia spilt its fair share of blood against the encroaching Japanese forces, Michael’s father had known this fact well but failed to secure for the Russian Empire its well-deserved spoils of war. What Michael had inherited was a nation hungry to see its flag flying over London, its old allies repaying their long overdue debts, and most importantly of all, to see the Russian Empire achieve its ambitions of global dominance. Michael though is a pragmatic man, dreams of empire are often not achieved overnight, these processes take time, effort, and luck. Everyone Russian deep down knows what’s to come, as does their Tsar, Michael may have let the people of his empire enjoy the benefits of democracy, but this has come at a cost. Democracy for empire, that was the deal Michael made to his people, and its one he expects repayment on soon."
+  RUS_Michael_II_Desc:0 "§YBorn:§! 4/12/1878\n\n§YMichael II§! has served the throne for over fifteen years, his time spent as Russia’s newest Tsar has been one of continued reform, political radicalization, and economic growth. It is in these years that Russia has fundamentally transformed itself into one of the leading powers of the world, holding dominion over Eurasia and the Americas with one of the largest standing armies in the world. It was with this army in the war-torn fields of Siberia during the Great War where Russia spilt its fair share of blood against the encroaching Japanese forces, Michael’s father had known this fact well but failed to secure for the Russian Empire its well-deserved spoils of war. What Michael had inherited was a nation hungry to see its flag flying over London, its old allies repaying their long overdue debts, and most importantly of all, to see the Russian Empire achieve its ambitions of global dominance. Michael though is a pragmatic man, dreams of empire are often not achieved overnight, these processes take time, effort, and luck. Everyone Russian deep down knows what’s to come, as so does their Tsar, Michael may have let the people of his empire enjoy the benefits of democracy, but this has come at a cost. Democracy for empire, that was the deal Michael made to his people, and its one he expects repayment on soon."
 
   ##########################
   # IDEAS
@@ -957,10 +957,9 @@
   PB_RUS_Pax_Russica:0 "Pax Russica"
   PB_RUS_Count_The_Dead:0 "Count The Dead"
   PB_RUS_Extort_The_Defeated:0 "Extort The Defeated"
-  PB_RUS_All_Empires_Die:0 "All Empires Die"
+  PB_RUS_The_New_World_Order:0 "The New World Order"
   PB_RUS_Fund_The_Promethus_Project:0 "Fund The Promethus Project"
-  PB_RUS_To_Become_Gods:0 "To Become Gods"
-  
+  PB_RUS_The_Hawaiian_Foothold:0 "The Hawaiian Foothold"
 
   PB_RUS_The_Imperial_Military_Office:0 "The Imperial Military Office"
   PB_RUS_Spector_Of_The_East:0 "Spector Of The East"
@@ -1564,6 +1563,7 @@
   PB_RUS_Imperial_Duopoly_tt:0 "§GTesla Electricworks§! becomes the dominant megacorp in France"
   PB_RUS_If_In_Alliance:0 "If §Ywe are in§! the §HPacte Revanchiste§! alliance then the following benefits will be added:\n "
   PB_RUS_If_Not_In_Alliance:0 "\nIf §Ywe are not§! in the §HPacte Revanchiste§! alliance then the following benefits will be added:\n "
+  PB_RUS_Grestin_Add_A_Nice_Ending_Event:0 "\nGrestin, add a nice event about some shit for russia's final post war focus, could be about anything, maybe what you had for dinner, your favourite colour, whats it like to suck a hoi4. =}\n\nAnyways §CS§!§Ok§!§gi§!§Bb§!§CHi§!§Yd§!§Ci§! §gT§!§Co§!§Oi§!§Pl§!§He§!§Yt§! or whatever the fuck the kids say these days."
 
   #######################
   # ARMY SPIRITS
