England Imperial Game

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -360,6 +360,7 @@
  VICTORY_POINTS_3686:0 "Sevastopol"
  VICTORY_POINTS_3717:0 "Maykop"
  VICTORY_POINTS_6718:0 "Pyatigorsk"
+ VICTORY_POINTS_3779:0 "Salsk"
  VICTORY_POINTS_4724:0 "Krasnoyarsk"
  VICTORY_POINTS_1803:0 "Bratsk"
  VICTORY_POINTS_4728:0 "Petropavlovsk"
