--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -962,36 +962,45 @@
   PB_RUS_The_Hawaiian_Foothold:0 "The Hawaiian Foothold"
 
   PB_RUS_The_Imperial_Military_Office:0 "The Imperial Military Office"
+  PB_RUS_The_Imperial_Military_Office_desc:0 "The Russian army stands as one of the largest continental armed forces on Earth, greater is its size than that of the British and German armies combined. It is with this army that Russia had achieved its victory in the First Great War against the Latin powers and Japan, but this victory had come at a great cost, even for the Russian nation. Millions were left dead, Siberia was in ruin, and Russia had nothing to show for all the blood that they shed. If Russia is to write the wrongs of the past and achieve victory against its enemies then it must turn to to its army and give it all that it needs."
   PB_RUS_Spector_Of_The_East:0 "Spector Of The East"
+  PB_RUS_Spector_Of_The_East_desc:0 "The main front that the Russian Empire had partook in was the Siberian Campaign against Japanese military forces. It is here amongst blood and snow that the empire had been put to test in the early 20th century, with the first global war of its kind. Despite achieving a technical victory against the Japanese the Russian people were left scarred, war-time occupation and the destruction of towns and cities by constantly shifting frontlines would forever cement the Japanese people as a national enemy of the Russian Empire, and by extension the Slavic race. These worries of the enemy in the East were only further worsened with the Jacobin takeover of Japan, the hatred Russia has towards Japan has now become more than just a hostile relationship between two rival empires, but one of ideological war. "
   PB_RUS_Revert_Naval_Neglect:0 "Revert Naval Neglect"
-  PB_RUS_Operations_Report_Vladivostok:0 "Operations Report: §YVladivostok§!"
-  PB_RUS_Operations_Report_Amur:0 "Operations Report: §YAmur§!"
-  PB_RUS_Operations_Report_Seoul:0 "Operations Report: §YSeoul§!"
-  PB_RUS_Operations_Report_Busan:0 "Operations Report: §YBusan§!"
+  PB_RUS_Revert_Naval_Neglect_desc:0 "The Russian Imperial Navy has seen better days, despite continous expansion before and well after the Great War such expansion has been rather slow and gradual, often beset with delays and cases of financial corruption. Let us deal with these systemic issues and get the ball rolling on the development of the Russian navy, for the good of the empire and its trade security. "
   PB_RUS_Continue_The_Air_Plan:0 "Continue The Air Plan"
+  PB_RUS_Continue_The_Air_Plan_desc:0 "The air academy of Russia has seen a massive increase in funding across the past decade, as the importance of air superiority in the battlefield has begun to reveal itself investments in the air sector have met expectations. We shall continue this funding so that Russia's skies remain safe."
+  PB_RUS_Operations_Report_Vladivostok:0 "Operations Report: §YVladivostok§!"
+  PB_RUS_Operations_Report_Vladivostok_desc:0 "The first Japanese offensive against our nation was the siege of Vladivostok, for two months the city had held against wave after wave of Japanese soldiers. Despite the cities eventual fall the fact that it had held out for so long with a small defending garrison was both a surprise to the Russian and Japanese armies, the cities long siege had allowed Russian troops from the west to make it the East in time to properly reinforce the Eastern Front. Had the city fell sooner we would have likely seen greater Japanese successes against our nation in Siberia."
+  PB_RUS_Operations_Report_Amur:0 "Operations Report: §YAmur§!"
+  PB_RUS_Operations_Report_Amur_desc:0 "Following the fall of Vladivostok the Japanese army had managed to force the Siberian Front to the Amur region, thankfully the exhausted Japanese army had lost its momentum, but what was crucial to stopping any further advancements was the fact that the supply situation in the East had finally resolved itself. The troop allocations had concluded and with that the railways connecting our empire were afforded more space to carry supply and war material. It is at Amur where the Japanese made their furthest advancement, and it is at Amur where they would make it their last. "
+  PB_RUS_Operations_Report_Seoul:0 "Operations Report: §YSeoul§!"
+  PB_RUS_Operations_Report_Seoul_desc:0 "The push to Seoul was no easy feat, month after month our armed forces would throw themselves against the tenacious Japanese and for every inch we took the more defiant our enemy became. When we finally arrived at Seoul what we found was an enemy that was exhausted, hunger had consumed the Japanese army and war fatigue was well-apparent to the Russian soldiers present in Korea. The battle for Seoul ensured Japan's defeat in the Great War, it was a hard-fought victory, but complex planning had allowed Russia to achieve what was thought to be impossible. "
+  PB_RUS_Operations_Report_Busan:0 "Operations Report: §YBusan§!"
+  PB_RUS_Operations_Report_Busan_desc:0 "Busan was the final holdout of the Japanese army in Korea, and for that matter the entire Siberian Campaign. With the fall of Busan no major land conflict would occur between the Russian and Japanese armies for the remainder of the First Great War. The siege of the city did not last long, little was left of the Japanese army in the region and it was obvious to both empires that a Russian victory over Korea was all but assured. "
   PB_RUS_Operational_Encirclement:0 "Operational Encirclement"
+  PB_RUS_Operational_Encirclement_desc:0 "The age of trenches is over, we must embrace mechanized warfare if we expect to defeat out foes. Shall we find comfort in steel and oil then victory will be ours. "
   PB_RUS_Attritional_Destruction:0 "Attritional Destruction"
+  PB_RUS_Attritional_Destruction_desc:0 "The Russian Empire is the largest political entity on Earth, we must use this fact to our advantage. For every inch our enemy gains over us that is a piece of land they must keep garrisoned and supplied, eventually our enemy will overstretch themselves, when this happens we will deal one decisive deathblow against their armies."
   PB_RUS_Relocate_Western_Industry:0 "Relocate Western Industry"
+  PB_RUS_Relocate_Western_Industry_desc:0 "As the enemy pushes further and further into our territory we must account for the fact that our industry will fall into enemy hands. To avoid this a plan has been proposed to see large swaths of Russia's western industry relocated eastwards."
   PB_RUS_Exhaust_The_Motherland:0 "Exhaust The Motherland"
-  PB_RUS_Expose_Their_Gaps:0 "Expose Their Gaps ..."
-  PB_RUS_Strategically_Envelop:0 "... Strategically     Envelop ..."
-  PB_RUS_And_Liquidate_The_Pocket:0 "... And Liquidate The Pocket"
+  PB_RUS_Exhaust_The_Motherland_desc:0 "No cost too great, no price too high, long live the empire, long live the motherland!"
   PB_RUS_Offensive_Pursuit:0 "Offensive Pursuit"
+  PB_RUS_Offensive_Pursuit_desc:0 "We must at all times keep our enemy guessing, constantly on the move, and on edge about a potential enemy offensive. An enviroment of uncertainty for our enemy means second guessing and poor planning, and that is exactly what we need.  "
   PB_RUS_Pincer_Maneuver_Tactics:0 "Pincer Maneuver Tactics"
+  PB_RUS_Pincer_Maneuver_Tactics_desc:0 "By keeping our enemy pinned we can free up other more mobile forces to envelop and liquidate pockets of resistance, this can only be achieved with a mechanized and mobile army."
   PB_RUS_Hades_Legion:0 "Hades Legion"
+  PB_RUS_Hades_Legion_desc:0 "A key factor in war time planning that is often forgotten is intelligance. To know what our enemy is thinking, and to obscure what we are planning is a crucial aspect in how offensive and defensive operations are carried out. In line with this thinking a plan has been proposed to raise a legion of men who exist on pen and paper."
   PB_RUS_Combined_Arms_Warfare:0 "Combined Arms Warfare"
-  PB_RUS_Maintain_Momentum_Planning:0 "Maintain Momentum Planning"
-  PB_RUS_Decisive_Battle:0 "Decisive Battle"
-  PB_RUS_Cut_Off_Their_Communications:0 "Cut Off Their Communications ..."
-  PB_RUS_Harass_The_Enemy:0 "... Harass The Enemy ..."
-  PB_RUS_And_Strike_While_Theyre_Weak:0 "... And Strike While They're Weak"
+  PB_RUS_Combined_Arms_Warfare_desc:0 "If we expect to win this war then coordination with all aspects of our military is a must. "
   PB_RUS_Defensive_Intimidation:0 "Defensive Intimidation"
+  PB_RUS_Defensive_Intimidation_desc:0 "Despite the claims by some military reformists that our army needs to be more mechanized the reality is that even the most modern and up to date armies are still mostly made up of infantry. So the question then is why bother? Let us use what works."
   PB_RUS_The_Trenchfront:0 "The Trenchfront"
+  PB_RUS_The_Trenchfront_desc:0 "Deep complex trench networks are the perfect counter to almost any enemy offensive, no matter how well supplied and planned they may be."
   PB_RUS_Mass_Bombardment:0 "Mass Bombardment"
-  PB_RUS_A_Human_Meatgrinder:0 "A Human Meatgrinder"
-  PB_RUS_Eat_The_Fields:0 "Eat The Fields"
+  PB_RUS_Mass_Bombardment_desc:0 "Continuous harassment of our enemy with artillery is a time tested strategy. "
   PB_RUS_Winter_Theories:0 "Winter Theories"
-
+  PB_RUS_Winter_Theories_desc:0 "Much of the Russian landscape is covered with snow during certain parts of the year, it is during this time that our enemy will struggle more so than us, let us use these windows of oppurtunity to weaken our foes."
 
   ########################## 
   # Decisions
