alaskan revolt stuff

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -679,6 +679,14 @@
   Russian_America.2.a:0 "Mobilize the Pacific Fleet!"
   Russian_America.2.b:0 "Who cares about Alaska?"
 
+  Russian_America.3.t:0 "Alaskan Independence"
+  Russian_America.3.d:0 ""
+  Russian_America.3.a:0 "We will strike again!"
+
+  Russian_America.4.t:0 "Operation Chernoye Zoloto"
+  Russian_America.4.d:0 ""
+  Russian_America.4.a:0 "We will not give up these lands!"
+
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -1249,6 +1257,7 @@
   PB_RUS_Altaic_Cultures_Accepted_tt:0 "§YAltaic§! and §YBuryat§! cultures will be §Gaccepted§! within the Russian Empire"
 
   RUS_Operation_Azalea_Mission:0 "Operation Azalea"
+  PB_Okhrana_Impending_National_Awakening:0 "Impending Second National Awakening"
 
   PB_RUS_Alaskan_Prospecting:0 "Alaskan Fortunes"
   PB_RUS_Alaskan_Prospecting_desc:0 "Alaska was, to many, a vast and empty wilderness, no different from Siberia across the Bering Strait, and for the longest time, that is how the Russian government viewed their American holdings.\n\nThis suddenly changed in 1871 with the discovery of gold in New Moscow, which brought thousands of Russian settlers east to Alaska, hoping to strike it rich. This caused the Russian government to begin to invest in the region, albeit half-heartedly as a result of the vast distance between the heartland of Russia and their colony. Such a distance convinced the government in Saint Petersburg to leave Alaska to control itself while Russia focused elsewhere, and in 1880, the "Russian America Reorganization Act" was enacted, reorganizing Alaska into the "United Colonies of Russian America", officializing its autonomy within the Russian Empire.\n\nThis has been the status quo until recently, when in 1927, the Vilkitsky Oil Basin, one of the largest such basins in North America, was discovered in the North Slope. The Alaskan economy skyrocketed as local companies and megacorporations began scrambling northwards in order to set up infrastructure to access the oil. However, the amount of oil that has been extracted from the basin has not been meaningful enough to allow the state of affairs to continue. As such, the Russian government has finally decided to place its stake in the Alaskan oil industry and has authorized the construction of a great singular pipeline, the Trans-American Pipeline, in order to begin effectively extracting the oil out of the remote basin and to the coast for usage within Russia proper.\n\nConditions are incredibly difficult due to Alaska's general nature, but that will not stop us from finishing our work and finally being able to completely tap into the great and vast wealth within Alaska's core and exploit its potential to the fullest.\n\nProgress of the §YTrans-American Pipeline§! - [?RUS.PB_RUS_Trans_Alaskan_Pipeline_var|%G]"
@@ -1262,6 +1271,12 @@
   PB_RUS_Cutting_Corners:0 "Cut Corners"
   PB_RUS_Clearing_Natural_Obstacles:0 "Clearing Nature's Obstacles"
   PB_RUS_Mass_Automation:0 "Mass Automation"
+
+  PB_RUS_Operation_Morzh:0 "Operation Morzh"
+  PB_RUS_Operation_Morzh_desc:0 "Our colony in §YAmerica§!, rich in oil and other valuable resources, has revolted against the motherland. We must restore order there within §Y180 days§!, otherwise regaining power will be much more difficult, and the new government will gain support from our enemies."
+  PB_RUS_Operation_Morzh_Requirment_tt:0 "§Y[ASK.GetNameWithFlag]§! is defeated within §Y180 days§!."
+
+  PB_RUS_Retake_Alaska_Prepare:0 "Preparation for Retaking Alaska"
 
   PB_RUS_First_Five_Year_Plan_Mission:0 "Deadline for the First Five Year Plan"
 
