--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4934,3 +4934,28 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   ASK_Russia_ds_ADJ:0 "Russian-American"
   ASK_Russia_cn_ADJ:0 "Russian-American"
   ASK_Russia_an_ADJ:0 "Russian-American"
+
+  GLG_Far_West_Rep_ni:0 "Far Western Republic"
+  GLG_Far_West_Rep_ni_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_ds:0 "Far Western Republic"
+  GLG_Far_West_Rep_ds_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_rc:0 "Far Western Republic"
+  GLG_Far_West_Rep_rc_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_an:0 "Far Western Republic"
+  GLG_Far_West_Rep_an_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_cn:0 "Far Western Republic"
+  GLG_Far_West_Rep_cn_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_lb:0 "Far Western Republic"
+  GLG_Far_West_Rep_lb_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_ss:0 "Far Western Republic"
+  GLG_Far_West_Rep_ss_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_jc:0 "Far Western Republic"
+  GLG_Far_West_Rep_jc_DEF:0 "The Far Western Republic"
+  GLG_Far_West_Rep_ni_ADJ:0 "Far Western"
+  GLG_Far_West_Rep_rc_ADJ:0 "Far Western"
+  GLG_Far_West_Rep_lb_ADJ:0 "Far Western"
+  GLG_Far_West_Rep_ss_ADJ:0 "Far Western"
+  GLG_Far_West_Rep_jc_ADJ:0 "Far Western"
+  GLG_Far_West_Rep_ds_ADJ:0 "Far Western"
+  GLG_Far_West_Rep_cn_ADJ:0 "Far Western"
+  GLG_Far_West_Rep_an_ADJ:0 "Far Western"
