--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8987,14 +8987,14 @@ GLG_ss:0 "Aleutian Islands Correctional Sector"
 GLG_ss_DEF:0 "The Aleutian Islands Correctional Sector"
 GLG_jc:0 "Aleutian Islands Correctional Sector"
 GLG_jc_DEF:0 "The Aleutian Islands Correctional Sector"
-GLG_ni_ADJ:0 "Alaskan"
-GLG_rc_ADJ:0 "Alaskan"
-GLG_lb_ADJ:0 "Alaskan"
-GLG_ss_ADJ:0 "Alaskan"
-GLG_jc_ADJ:0 "Alaskan"
-GLG_ds_ADJ:0 "Alaskan"
-GLG_cn_ADJ:0 "Alaskan"
-GLG_an_ADJ:0 "Alaskan"
+GLG_ni_ADJ:0 "Aleutian"
+GLG_rc_ADJ:0 "Aleutian"
+GLG_lb_ADJ:0 "Aleutian"
+GLG_ss_ADJ:0 "Aleutian"
+GLG_jc_ADJ:0 "Aleutian"
+GLG_ds_ADJ:0 "Aleutian"
+GLG_cn_ADJ:0 "Aleutian"
+GLG_an_ADJ:0 "Aleutian"
 
 AZO_ni:0 "Area Zero"
 AZO_ni_DEF:0 "The North Manchuria Independent Research Site"
