Russian Ministers Work

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -120,12 +120,33 @@
   RUS_Dmitry_Odinets_FM:0 "Dmitry Odinets"
   RUS_Maxim_Litvinov_FM:0 "Maxim Litvinov"
   RUS_Andrey_Vyshinsky_FM:0 "Andrey Vyshinsky"
+  RUS_Alexander_Trepov_FM:0 "Alexander Trepov"
+  RUS_Ivan_Shcheglovitov_FM:0 "Ivan Shcheglovitov"
+  RUS_Georgy_Chicherin_FM:0 "Georgy Chicherin"
+  RUS_Alexander_Dubrovin_FM:0 "Alexander Dubrovin"
+  RUS_Alexander_Scriabin_FM:0 "Alexander Scriabin"
+  RUS_Pavel_Florensky_FM:0 "Pavel Florensky"
+  RUS_Pavel_Krushevan_FM:0 "Pavel Krushevan"
+  RUS_Boris_Brasol_FM:0 "Boris Brasol"
+
+  RUS_Alexander_Protopopov_IM:0 "Alexander Protopopov"
+  RUS_Mikhail_Rodzianko_IM:0 "Mikhail Rodzianko"
+  RUS_Nikolay_Gredeskul_IM:0 "Nikolay Gredeskul"
+  RUS_Sergei_Bulgakov_IM:0 "Sergei Bulgakov"
+  RUS_Pyotr_Wrangel_IM:0 "Pyotr Wrangel"
+  RUS_Alexei_Polivanov_IM:0 "Alexei Polivanov"
+  RUS_Victor_Serge_IM:0 "Victor Serge"
+  RUS_Alexei_Rykov_IM:0 "Alexei Rykov"
+  RUS_Mikhail_Diterikhs_IM:0 "Mikhail Diterikhs"
+  RUS_Ivan_Mikhailov_IM:0 "Ivan Mikhailov"
+  
 
   PB_Moscow_Circle_Manchurian_Faction:0 "Manchurian Clique"
   PB_Moscow_Circle_Baltic_Faction:0 "Baltic Clique"
   PB_Okhrana_Connections:0 "Okhrana Connections"
   PB_Historian:0 "Historian"
   PB_Cosmist:0 "Cosmist"
+  PB_Left_Cosmist:0 "Left Cosmist"
   PB_Solidarist:0 "Solidarist"
   PB_Individualist:0 "Individualist"
   PB_Nobility_Ties:0 "Noble Ties"
@@ -145,6 +166,9 @@
   PB_RUS_Empress_Regent:0 "Empress Regent"
   PB_RUS_Charitable:0 "Charitable"
   PB_RUS_Sickly:0 "Sickly"
+  PB_RUS_Anti_Semitic:0 "Anti-Semite"
+  PB_RUS_Theologian:0 "Theologian"
+  PB_RUS_Duma_Connections:0 "Duma Connections"
   PB_RUS_Soverign_Of_The_New_World_Order:0 "Soverign Of The New World Order"
   PB_RUS_Pragmatist:0 "Russia's Greatest Pragmatist"
   PB_RUS_Anglophobe:0 "Anglophobe"
