Russian Elections Work

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -367,6 +367,7 @@
   Russian_Politics.19.t:0 "Church and State"
   Russian_Politics.19.d:0 "PLACEHOLDER The new regent creates a series of government offices staffed by church officials intended to serve as a balance to the secular elements of the Russian state"
   Russian_Politics.19.a:0 "Perhaps we can compromise on secularism."
+  Russian_Politics.19.b:0 "Invite Vvedensky's Cosmists in an advisory role."
 
   Russian_Politics.20.t:0 "Worrying Communications"
   Russian_Politics.20.d:0 "PLACEHOLDER Loyalists within the Russian government discover a series of hidden communications being transmitted to certain units throughout the country and attempt to investigate."
@@ -398,6 +399,77 @@
   Russian_Politics.26.t:0 "The Duma Burns"
   Russian_Politics.26.d:0 "PLACEHOLDER Though at significant cost, the Loyalists retook the Duma and arrested or eliminated the plotters. The Moscow Circle collapses under public backlash."
   Russian_Politics.26.a:0 "A nascent democracy saved, but at what cost?"
+
+  Russian_Politics.27.t:0 "The Cosmists pressure the Regent"
+  Russian_Politics.27.d:0 "PLACEHOLDER Vvedensky pressures Empress Regent Olga to dissolve parliament, claiming that Russia's instability is being caused by a lack of faith."
+  Russian_Politics.27.a:0 "Russia's people have been denied faith for too long."
+  Russian_Politics.27.b:0 "This is a bridge too far for the Empire."
+
+  Russian_Politics.28.t:0 "The Ecumenical Council of Holy Russia"
+  Russian_Politics.28.d:0 "PLACEHOLDER"
+  Russian_Politics.28.a:0 "Vvedensky will be appointed High Patriarch"
+  Russian_Politics.28.b:0 "Vvedensky steps down in favor of Roerich"
+  Russian_Politics.28.c:0 "Vvedensky appoints Vernadsky as head of the Council"
+
+  Russian_Politics.29.t:0 "The First National Election"
+  Russian_Politics.29.d:0 ""
+  Russian_Politics.29.a:0 "The Kadets win Northern Russia!"
+  Russian_Politics.29.b:0 "The Zemtsvoites take a victory!"
+  Russian_Politics.29.c:0 "The Nationalists sweep the polls!"
+
+  Russian_Politics.30.t:0 "Votes Cast in Central Russia"
+  Russian_Politics.30.d:0 ""
+  Russian_Politics.30.a:0 "The Kadets seize the Polls!"
+  Russian_Politics.30.b:0 "The Zemtsvoites win once again!"
+  Russian_Politics.30.c:0 "The Nationalists deliver an underdog victory!"
+
+  Russian_Politics.31.t:0 "Polls open in Siberia"
+  Russian_Politics.31.d:0 ""
+  Russian_Politics.31.a:0 "The Kadets sweep the Steppes!"
+  Russian_Politics.31.b:0 "The Zemtsvoites take the Polls!"
+  Russian_Politics.31.c:0 "The Nationalists swing into victory!"
+
+  Russian_Politics.33.t:0 "The Autonomous Dumas Vote"
+  Russian_Politics.33.d:0 ""
+  Russian_Politics.33.a:0 "Democracy is the right of all citizens!"
+
+  Russian_Politics.34.t:0 "The Results of the National Election"
+  Russian_Politics.34.d:0 ""
+  Russian_Politics.34.a:0 "And the winner is..."
+
+  Russian_Politics.35.t:0 "The First Kadet Government"
+  Russian_Politics.35.d:0 ""
+  Russian_Politics.35.a:0 "Guchkov will form a new government."
+  Russian_Politics.35.b:0 "Poniatoff and the Right-Kadets form the next government."
+
+  Russian_Politics.36.t:0 "The First Zemtsvoite Government"
+  Russian_Politics.36.d:0 ""
+  Russian_Politics.36.a:0 "Maklakov is appointed Prime Minister."
+  Russian_Politics.36.b:0 "Milyukov will be the next Prime Minister."
+
+  Russian_Politics.37.t:0 "The First Nationalist Government"
+  Russian_Politics.37.d:0 ""
+  Russian_Politics.37.a:0 "Baidalakov will form a new government."
+
+  Russian_Politics.38.t:0 "The Runoff Election"
+  Russian_Politics.38.d:0 ""
+  Russian_Politics.38.a:0 "The results are in..."
+
+  Russian_Politics.39.t:0 "The First Narodnik Government"
+  Russian_Politics.39.d:0 ""
+  Russian_Politics.39.a:0 "Kamenev's moderates will form the next government."
+  Russian_Politics.39.b:0 "Rosenbaum's radicals enter parliament."
+
+  Russian_Politics.40.t:0 "Dissolution of the Aleutian Correctional Zone"
+  Russian_Politics.40.d:0 ""
+  Russian_Politics.40.a:0 "Release and pardon all political offenders."
+  Russian_Politics.40.b:0 "Release, pardon and compensate the political offenders."
+  Russian_Politics.40.c:0 "Release a few token offenders and remand the rest."
+
+  Russian_Politics.41.t:0 "Bronstein's Nightmare Archipelago"
+  Russian_Politics.41.d:0 "With the closure of the Aleutian Islands Correctional Complex, the process to reintegrate former prisoners into society has been difficult. While not an extensive part of the population, a generous number of those imprisoned were former agitators, often of the socialist variety. One of the most vocal ex-prisoners, Lev Bronstein, recently published his novella “Nightmare Archipelago”.\n\nAn extensive condemnation of the entire Aleutian Correctional Project and the Russian government itself, the novella details Bronstein’s own experience as a prisoner in the Complex. Despite its’ shorter length, the piece details the extensive abuses of the Aleutian Complex in lurid detail. Bronstein writes of prisoners being subjected to weeks of solitary confinement, rampant abuses of power, and most damningly the abuses of staff in the women’s facilities. While our own records showed some abuses, Bronstein’s work suggests that even the central government was unaware of the depravity their own correctional staff participated in. Rape is noted as having become a borderline epidemic within the staff of the women’s facilities, much to the embarrassment of Saint Petersburg.\n\nThough many within the government believe Bronstein is exaggerating the abuses for political gain, we have nonetheless received significant backlash since the work was published. It’s been suggested that the novella be banned from Russian publication, although this might lead members of the public to believe it is the whole truth."
+  Russian_Politics.41.a:0 "That's embarassing."
+  Russian_Politics.41.b:0 "Quietly have the book banned."
 
   Russian_Assassination_Attempt.1.t:0 "Redemption Day"
   Russian_Assassination_Attempt.1.d:0 "It was hard to hear a portable radio over the sound of the crowd; an instrumental jazz tune hummed in one ear. She paid close attention to the notes, the warbling of the bass section, the trumpets blaring. As it all slowed to a close, an announcer with a thick Polish accent chimed in. It wasn’t the typical announcer, who at the moment was tied up in a broom closet.\n\n“Good morning, listeners. The time is eight AM. For those attending the parade this morning, the weather service has advised carrying a parasol due to the chance of rain. Don’t touch that dial now listeners, we’re just getting started with today’s catalogue-“\n\nKasandra flicked the radio off and dug her hands into her coat pockets, one hand withdrawing an old half burnt photograph. Two dirty looking children and their mother on a farm, smiling in squalor, faces distorted by melted film. The mother’s face was all but obscured by the charring; Kasandra couldn’t remember what she looked like.\n\nIn a few moments she was near the head of the crowd. The Tsar was off the podium, all smiles and shaking hands. A few nervous looking security agents orbited around him and shooed off the odd heckler. She made her way through the throng of people slowly, casually, pretending to try and get a better look. After a moment, she was within ten feet, the perfect distance.\n\nAs the Tsar made his way past, she casually slipped her hand into her pocket once more and withdrew a pistol. Seconds felt like hours now, adrenaline saturating as the sights leveled. One of the officers spotted her, sprinting towards the Tsar. Michael only had the briefest moment to glance at the commotion, eyes meeting the barrel of a gun. It was as if time stopped at that exact instant; an emperor faced with a peasant’s pistol. There wasn’t time to duck, all Michael could do was watch dumbfounded.\n\nOne barely audible prayer escaped the woman’s lips before she pulled the trigger.\n\n"God, please.""
