Russian elections work continued

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -471,6 +471,35 @@
   Russian_Politics.41.a:0 "That's embarassing."
   Russian_Politics.41.b:0 "Quietly have the book banned."
 
+  Russian_Politics.42.t:0 "The Second National Election"
+  Russian_Politics.42.d:0 ""
+  Russian_Politics.42.a:0 "The Kadets win Northern Russia!"
+  Russian_Politics.42.b:0 "The Zemtsvoites take a victory!"
+  Russian_Politics.42.c:0 "The Nationalists sweep the polls!"
+  Russian_Politics.42.e:0 "The Narodniks achieve victory!"
+
+  Russian_Politics.43.t:0 "Votes Cast in Central Russia"
+  Russian_Politics.43.d:0 ""
+  Russian_Politics.43.a:0 "The Kadets win Central Russia!"
+  Russian_Politics.43.b:0 "The Zemtsvoites see a success!"
+  Russian_Politics.43.c:0 "The Nationalists deliver the win!"
+  Russian_Politics.43.e:0 "The Narodniks take the polls!"
+
+  Russian_Politics.44.t:0 "Polls open in Siberia"
+  Russian_Politics.44.d:0 ""
+  Russian_Politics.44.a:0 "The Kadets sweep the Steppes!"
+  Russian_Politics.44.b:0 "The Zemtsvoites take the Polls!"
+  Russian_Politics.44.c:0 "The Nationalists swing into victory!"
+  Russian_Politics.44.e:0 "The Narodniks take the polls!"
+
+  Russian_Politics.45.t:0 "The Results of the National Election"
+  Russian_Politics.45.d:0 ""
+  Russian_Politics.45.a:0 "And the winner is..."
+
+  Russian_Politics.46.t:0 "The Runoff Election"
+  Russian_Politics.46.d:0 ""
+  Russian_Politics.46.a:0 "The results are in..."
+
   Russian_Assassination_Attempt.1.t:0 "Redemption Day"
   Russian_Assassination_Attempt.1.d:0 "It was hard to hear a portable radio over the sound of the crowd; an instrumental jazz tune hummed in one ear. She paid close attention to the notes, the warbling of the bass section, the trumpets blaring. As it all slowed to a close, an announcer with a thick Polish accent chimed in. It wasn’t the typical announcer, who at the moment was tied up in a broom closet.\n\n“Good morning, listeners. The time is eight AM. For those attending the parade this morning, the weather service has advised carrying a parasol due to the chance of rain. Don’t touch that dial now listeners, we’re just getting started with today’s catalogue-“\n\nKasandra flicked the radio off and dug her hands into her coat pockets, one hand withdrawing an old half burnt photograph. Two dirty looking children and their mother on a farm, smiling in squalor, faces distorted by melted film. The mother’s face was all but obscured by the charring; Kasandra couldn’t remember what she looked like.\n\nIn a few moments she was near the head of the crowd. The Tsar was off the podium, all smiles and shaking hands. A few nervous looking security agents orbited around him and shooed off the odd heckler. She made her way through the throng of people slowly, casually, pretending to try and get a better look. After a moment, she was within ten feet, the perfect distance.\n\nAs the Tsar made his way past, she casually slipped her hand into her pocket once more and withdrew a pistol. Seconds felt like hours now, adrenaline saturating as the sights leveled. One of the officers spotted her, sprinting towards the Tsar. Michael only had the briefest moment to glance at the commotion, eyes meeting the barrel of a gun. It was as if time stopped at that exact instant; an emperor faced with a peasant’s pistol. There wasn’t time to duck, all Michael could do was watch dumbfounded.\n\nOne barely audible prayer escaped the woman’s lips before she pulled the trigger.\n\n"God, please.""
   Russian_Assassination_Attempt.1.a:0 "The bullet strikes the Tsar!"
@@ -529,8 +558,8 @@
 
   Russia_Leadership.1.t:0 "An Empty Throne"
   Russia_Leadership.1.d:0 ""
-  Russia_Leadership.1.a:0 "Grand Duchess Xenia will ascend to Empress Regent."
-  Russia_Leadership.1.b:0 "Grand Duchess Olga takes the reigns as Regent."
+  Russia_Leadership.1.a:0 "Grand Duchess Xenia will ascend to Tsarina"
+  Russia_Leadership.1.b:0 "Grand Duchess Olga takes the reigns as Tsarina"
   Russia_Leadership.1.c:0 "Grand Duke George shall become Tsar."
 
   Russian_Flavour.1.t:0 "FNCC Settlement Magadan"
