Now this is progress.

--- a/localisation/english/OTH_misc_l_english.yml
+++ b/localisation/english/OTH_misc_l_english.yml
@@ -5,5 +5,5 @@
   OTH_alert_tt_delayed: "[!fetch_alert_delayed]\n\n§GRight-click to dismiss of this alert§!"
   debug_mode_enabled: "§HDebug Mode Enabled§!"
   debug_mode_enabled_delayed: "You are currently in §Ydebug§! mode!\nHave fun developing and testing your favorite mod, Over the Horizon!"
-  pax_tension_test_enabled: "§HImperial Tension has worsened§!"
+  pax_tension_test_enabled: "§RImperial Tension Breaking Point!§!"
   pax_tension_test_enabled_delayed: "test test test"
