--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -207,6 +207,14 @@
   ImpCiv_Crisis.15.d:0 "Escalations continue across North America, particularly in the Caribbean where the issue of Bermuda has risen to prominence again in dramatic fashion. As the British have refused to cooperate with American naval orders in Bermuda, Commonwealth Naval Command established an exclusion zone around the island. Ships identitifed as British have, until now, stopped peacefully and allowed search for military armaments. There's been some grumbling and a few spats, but nothing terribly serious.\n\nUntil now.\n\nEarly this morning, we detected a British submarine within the exclusion zone that had failed to identify itself. As per protocol, American destroyers converged on the submarine and signalled it to surface with low yield depth charges. Rather than surface, the submarine fired on one of the destroyers and damaged it before fleeing the exclusion zone. This marks the first direct attack by British naval assets on the American military, and as such our forces have abolished the exclusion zone and begun directly targeting British naval forces around Bermuda."
   ImpCiv_Crisis.15.a:0 "War is nearly upon us."
 
+  ImpCiv_Crisis.151.t:0 "Our Patience Is Running Out"
+  ImpCiv_Crisis.151.d:0 "."
+  ImpCiv_Crisis.151.a:0 "Why are we even in all of this anymore?."
+
+  ImpCiv_Crisis.152.t:0 "Negotiations with Britain Break Down"
+  ImpCiv_Crisis.152.d:0 "."
+  ImpCiv_Crisis.152.a:0 "They dont care about us. Why should we?."
+
   ImpCiv_Crisis.16.t:0 "The Last Minutes Of Peace"
   ImpCiv_Crisis.16.d:0 "Flashpoints continue to spark throughout the empire. This evening, British and American forces in New England faced off and came away more confused than anything. Our report states that British troops were spotted outside Epping, an area near the rebelling New England provinces. Due to being directly marked as British soldiery, they were approached with caution. Despite this caution, a firefight ensued which left at least one dead from our side and possibly three to four on theirs, depending on who's being asked.\n\nRadio contact between British and American forces in the region has ceased entirely since then. Either the British have changed their codes or they're simply not interested in chit chat now. It's made it impossible to prevent conflict in the region, as no one is making any effort to coordinate. Shootouts are already being reported across the entire border, with both sides seemingly taking random pot shots at one another."
   ImpCiv_Crisis.16.a:0 "Who Shot First?"
