--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -374,6 +374,7 @@ PB_Statistician:0 "Statistician"
 PB_Questionable_Loyalty:0 "Questionable Loyalty"
 PB_Denikins_Lapdog:0 "Denikin's Lapdog"
 PB_Culinary_Enthusiast:0 "Culinary Enthusiast"
+PB_Entrepreneur:0 "Entrepreneur"
 
 PB_Technocrats:0 "Technocrat"
 PB_Militarists:0 "Militarist"
