Alerts work now

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -399,6 +399,10 @@ PB_AME_Zeledonists_Defeated_idea:0 "Zeledonists Defeated"
 PB_AME_Federalists_Defeated_idea:0 "Federalists Defeated"
 
 PB_AME_Army_Broken_Split_FSA:0 "Army in Dissarray"
+PB_AME_Army_Broken_Split_FSA_desc:0 "While the High Command has stood mostly intact, there are several units who have switched sides to the rebellion. Several battalions have simply vanished from the map. It will take some time to install confindence in the troops again..."
+
+PB_AME_Army_Broken_Split_North_East:0 "High Command In Chaos"
+PB_AME_Army_Broken_Split_North_East_desc:0 "Several Generals and Officers have joined the Forsaken Loyalists and are now commanding the rebellious units in New England. It will take some time to repair this damage to the high command..."
 
 PB_AME_Southern_Reperations:0 "Dixie Reperations"
 
