grind never stops

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -310,7 +310,7 @@
  STATE_309: "Suriname"
  STATE_310: "Cayenne"
  STATE_311: "British Honduras"
- STATE_312: "Honduras"
+ STATE_312: "Comayagua"
  STATE_313: "Guatemala"
  STATE_314: "El Salvador"
  STATE_315: "Cuba"
@@ -1209,3 +1209,8 @@
  STATE_1208: "Southern Bessarabia"
  STATE_1209: "Northern Epirus"
  STATE_1210: "Ionian Islands"
+ STATE_1211: "Tabasco"
+ STATE_1212: "Peten"
+ STATE_1213: "Teguzgalpa"
+ STATE_1214: "Tologalpa"
+ STATE_1215: "Panama"
