more strat regions

--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -296,3 +296,20 @@
  STRATEGICREGION_295:0 "St. Lawrence Gulf"
  STRATEGICREGION_296:0 "Australian Sea"
  STRATEGICREGION_297:0 "Baffin Island"
+ STRATEGICREGION_298:0 "Chukchi Sea"
+ STRATEGICREGION_299:0 "Kara Sea"
+ STRATEGICREGION_300:0 "East Siberian Sea"
+ STRATEGICREGION_301:0 "West Siberian Sea"
+ STRATEGICREGION_302:0 "Greenland Sea"
+ STRATEGICREGION_303:0 "Arctic Sea"
+ STRATEGICREGION_304:0 "Drake Passage"
+ STRATEGICREGION_305:0 "Weddel Sea"
+ STRATEGICREGION_306:0 "Lazarev Sea"
+ STRATEGICREGION_307:0 "Riiser-Larsen Sea"
+ STRATEGICREGION_308:0 "Cooperation Sea"
+ STRATEGICREGION_309:0 "Mawson Sea"
+ STRATEGICREGION_310:0 "Samov Sea"
+ STRATEGICREGION_311:0 "Ross Sea"
+ STRATEGICREGION_312:0 "Amundsen Sea"
+ STRATEGICREGION_313:0 "Bellingshausen Sea"
+ STRATEGICREGION_314:0 "Baffin Sea"
