--- a/localisation/english/PB_adjacency_rules_l_english.yml
+++ b/localisation/english/PB_adjacency_rules_l_english.yml
@@ -1,5 +1,10 @@
 ﻿l_english:
  SUEZ_CANAL:0 "Suez Canal"
  NICARAGUA_CANAL:0 "Nicaraguan Canal"
+ ST_LAWRENCE_RIVER:0 "St. Lawrence Seaway"
+ NIAGARA_CANAL:0 "Niagara Canal"
+ DETROIT_CANAL:0 "Detroit Canal"
+ ST_MARYS_CANAL:0 "St. Mary's Canal"
+ FINSCH_CANAL:0 "Finsch Canal"
 
  nicaragua_canal_not_built_tooltip:0 "The §YNicaraguan Canal§! is either §Runfinished§! or you are §Rblocked§! from going through the §Ycanal.§!"
