--- a/localisation/english/terrain_l_english.yml
+++ b/localisation/english/terrain_l_english.yml
@@ -15,12 +15,16 @@
  plains_desc:0 ""
  urban:0 "Urban"
  urban_desc:0 ""
+ dense_urban:0 "Dense Urban"
+ dense_urban_desc:0 ""
  jungle:0 "Jungle"
  jungle_desc:0 ""
  marsh:0 "Marsh"
  marsh_desc:0 ""
  desert:0 "Desert"
  desert_desc:0 ""
+ ice_sheet:0 "Ice Sheet"
+ ice_sheet_desc:0 ""
  water_fjords:0 "Fjords and Archipelagos"
  water_fjords_desc:0 ""
  water_shallow_sea:0 "Shallow Sea"
