--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -487,6 +487,23 @@
   JAP_ni_party:0 "Nashonaru sēbingu kurīku"
   JAP_ni_party_long:0 "Nashonaru sēbingu kurīku - Extremists"
 
+  ARG_jc_party:0 "Various Revolutionary Republicans"
+  ARG_jc_party_long:0 "Various Revolutionary Republicans"
+  ARG_ss_party:0 "SdTA"
+  ARG_ss_party_long:0 "Sindicatos de Trabajadores Argentinos"
+  ARG_lb_party:0 "PLUdA"
+  ARG_lb_party_long:0 "Partido Liberal Unido de Argentina"
+  ARG_cn_party:0 "PDC - Moderates"
+  ARG_cn_party_long:0 "Partido por la Democracia Cristiana - Moderates"
+  ARG_an_party:0 "Independents"
+  ARG_an_party_long:0 "Independents"
+  ARG_rc_party:0 "PDC - Extremists"
+  ARG_rc_party_long:0 "Partido por la Democracia Cristiana - Extremists"
+  ARG_ds_party:0 "Fuerzas Armadas de Argentina"
+  ARG_ds_party_long:0 "Fuerzas Armadas de Argentina"
+  ARG_ni_party:0 "ARNA"
+  ARG_ni_party_long:0 "Asociación Republicana Nacional Argentina"
+
   ETH_jc_party:0 "Various Jacobins"
   ETH_jc_party_long:0 "Various Jacobins"
   ETH_ss_party:0 "FAPP"
